Use the builder in some more places and remove a constructor